--- a/src/style.sass
+++ b/src/style.sass
@@ -75,9 +75,10 @@ body
         font-size: 0.85rem
         
     .main
-        grid-template-columns: 1fr
-        grid-template-rows: 1fr 1fr
-        padding: 2.5em
+        display: flex
+        flex-direction: column
+        align-items: center
+        justify-content: stretch
 
 @media screen and (min-width: 767px) and (max-width: 992px)
     *
